--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,6 @@ input {
   width: 95%;
 }
 
-.login-button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 10px;
-}
-
 
 .class-name {
   display: flex;
@@ -42,8 +36,12 @@ input {
   margin: 10px;
   border: 6px solid black;
   height: 10%;
-  padding: 5px 10px;
+  padding: 5px;
 
+}
+
+p {
+  margin: 4px;
 }
 
 .image {
